refactor: move simulation() to higher class, remove unused classes